--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
   </head>
 
   <body>
-    <h1>Hello World, We are a Software Developers!</h1>
+    <h1 id="title">Survey Form!</h1>
+    <p id="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt eligendi nesciunt laudantium similique aperiam, animi veritatis maiores expedita eos esse voluptas repellat non!</p>
+    <form id="survey-form">
+      <input id="name" placeholder="Name" />
+    </form>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
   </body>
