--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <p id="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi sunt eligendi nesciunt laudantium similique aperiam, animi veritatis maiores expedita eos esse voluptas repellat non!</p>
     <form id="survey-form">
       <input id="name" placeholder="Name" />
+      <input id="email" placeholder="Email Address" type="email" />
+      <input id="number" type="number" placeholder= "Enter Number" />
+
+
     </form>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
