--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <option>1</option>
         <option>2</option>
       </select>
-
+      <input type="radio" name="gender" value="M" />
+      <input type="radio" name="gender" value="F" />
+      <input type="checkbox" value="+18" />
+      <input type="checkbox" value="Student" />
+      <textarea rows=5 cols="15" ></textarea>
+      <input type="submit" id="submit" />
     </form>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <script  src="js/index.js"></script>
